test/error/s_badproxy.lua
hstructure S
	meta : table;
	o : object;
	proxytable;
end
